--- a/package.json
+++ b/package.json
@@ -10,11 +10,20 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^2.1.0",
+    "@react-native-community/datetimepicker": "^8.2.0",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/native-stack": "^7.2.0",
+    "axios": "^1.7.9",
+    "core-js": "^3.40.0",
+    "jwt-decode": "^4.0.0",
+    "moment": "^2.30.1",
     "react": "18.3.1",
     "react-native": "0.76.6",
+    "react-native-maps": "^1.20.1",
+    "react-native-modal-datetime-picker": "^18.0.0",
+    "react-native-modals": "^0.22.3",
     "react-native-safe-area-context": "^5.1.0",
     "react-native-screens": "^4.5.0",
     "react-native-vector-icons": "^10.2.0"
