--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -85,6 +85,9 @@ android {
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
         versionName "1.0"
+         manifestPlaceholders = [
+            GOOGLE_API_KEY: GOOGLE_API_KEY
+        ]
     }
     signingConfigs {
         debug {
